fix: auth api
