# docs/swagger/swagger.json
@@ -312,6 +312,17 @@
         }
     },
     "definitions": {
+        "constants.ErrorCode": {
+            "type": "string",
+            "enum": [
+                "000001",
+                "000002"
+            ],
+            "x-enum-varnames": [
+                "COMMON_ERROR",
+                "EMAIL_UNVERIFIED"
+            ]
+        },
         "constants.HttpStatusCode": {
             "type": "integer",
             "enum": [
@@ -454,9 +465,6 @@
         "request.RefreshTokenRequest": {
             "type": "object",
             "properties": {
-                "refreshToken": {
-                    "type": "string"
-                },
                 "sessionId": {
                     "type": "string"
                 }
@@ -538,6 +546,9 @@
                     "$ref": "#/definitions/constants.HttpStatusCode"
                 },
                 "data": {},
+                "error_code": {
+                    "$ref": "#/definitions/constants.ErrorCode"
+                },
                 "message": {
                     "type": "string"
                 },
